@@ -8,6 +8,7 @@
 * Add - New notification to urge setting SSL for checkout pages if store doesn't use HTTPS
 * Fix - Fixed connection timeout configuration.
 * Fix - Specify error code when refund fails in admin to prevent blank alert.
+* Fix - Add fees as line items sent to Stripe to prevent Level 3 errors.
 
 = 1.8.0 - 2020-12-16 =
 * Add - Include information about failing payment into order notes.
